--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,11 @@
     <groupId>ru.otus</groupId>
     <artifactId>SpringFramework</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <properties>
+        <mockito-all.version>1.10.19</mockito-all.version>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
@@ -32,6 +37,24 @@
             <artifactId>opencsv</artifactId>
             <version>4.4</version>
         </dependency>
-
+        <!-- Mockito -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>${mockito-all.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- AssertJ -->
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.12.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
